--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -84,23 +84,29 @@
     {% endif %}
     
   
-    <!-- <script>
+    <script>
         function toFixed(num, fixed) {
             var re = new RegExp('^-?\\d+(?:\.\\d{0,' + (fixed || -1) + '})?');
             return num.toString().match(re)[0];
         }
         
         function prestacao1(){
-            var valor_emprestado = document.getElementById('valor_emprestado')
-            var qtd_parcelas = document.getElementById('qtd_parcelas')
-            var prestacao = document.getElementById('prestacao')
+            var tvalor_emprestado = document.getElementById('valor_emprestado')
+            var tqtd_parcelas     = document.getElementById('qtd_parcelas')
+            var tprestacao        = document.getElementById('prestacao')
+
+            var valor_emprestado = Number(tvalor_emprestado.value)
+            var qtd_parcelas     = Number(tqtd_parcelas.value)
+            var prestacao        = Number(tprestacao.value)
+
+
+
+
             
             var iof_inicial = 0
             var iof_diario  = 0.0041
             var qut_dias = 0
 
-
-            
 
             for (var i = 0 ; i < 2; i++){
                 valor_emprestado = Number(valor_emprestado.value)
@@ -113,12 +119,13 @@
             }
 
             document.getElementById('prestacao').value = iof_inicial
+            
 
 
 
         }
 
-    </script> -->
+    </script> 
 {% endblock content %}
 
 
