nacionalidade inserido em cliente cpf e values setados em nacionalidade e naturalidade

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -124,7 +124,13 @@
             <div class="col-sm-2">
                 <div class="form-group">
                     <label for="" class="required">{{form.naturalidade.label}}</label>
-                    {% render_field form.naturalidade class="form-control" %}
+                    {% render_field form.naturalidade class="form-control" value="Natalense" %}
+                </div>  
+            </div>
+            <div class="col-sm-2">
+                <div class="form-group">
+                    <label for="" class="required">{{form.nacionalidade.label}}</label>
+                    {% render_field form.naturalidade class="form-control" value="Brasileira" %}
                 </div>  
             </div>
             <div class="col-sm-5">                    
