--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -124,13 +124,13 @@
             <div class="col-sm-2">
                 <div class="form-group">
                     <label for="" class="required">{{form.naturalidade.label}}</label>
-                    {% render_field form.naturalidade class="form-control" value="Natalense" %}
+                    {% render_field form.naturalidade class="form-control"  %}
                 </div>  
             </div>
             <div class="col-sm-2">
                 <div class="form-group">
                     <label for="" class="required">{{form.nacionalidade.label}}</label>
-                    {% render_field form.naturalidade class="form-control" value="Brasileira" %}
+                    {% render_field form.nacionalidade class="form-control" %}
                 </div>  
             </div>
             <div class="col-sm-5">                    
