contrato cnpj com quadros completos e inserindo cláusulas

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -468,12 +468,28 @@ window.onload = function imprimir(){
         <div class="quadro" >
             <br>
         </div>
+
         <div class="paragrafo" > 
-        Por este instrumento particular, as partes acima qualificadas, justas e acertadas, celebram o presente CONTRATO DE MÚTUO FINANCEIRO, que se regerá pelo art. 586, do Código Civil Brasileiro, pela Lei Complementar nº 167/2019 e pelas cláusulas e condições abaixo descritas: 
-        DA COMPOSIÇÃO DO CRÉDITO
-        CLÁUSULA1ª A integralidade do crédito é composta da seguinte forma: Valor mutuado R$ 503,14, Taxa de Juros a.m (9,50)%, taxa de juros moratório 0,66% ao dia, multa por atraso: 2%, IOF Adicional ( 1,90), IOF diário (1,24), valor do IOF total: R$ 3,14, Valor total devido: R$ 646,53.
-        DO CRÉDITO 
-        CLÁUSULA 2ª. A CONTRATADA MUTUANTE concedeu à CONTRATANTE MUTUÁRIA um empréstimo no valor descrito na cláusula 1ª – Composição do Crédito, que será restituído nas épocas próprias e nas condições fixadas neste CONTRATO
+        Por este instrumento particular, as partes acima qualificadas, justas e acertadas, celebram o 
+        presente <strong>CONTRATO DE MÚTUO FINANCEIRO</strong>, que se regerá pelo art. 586, do Código Civil Brasileiro, 
+        pela Lei Complementar nº 167/2019 e pelas cláusulas e condições abaixo descritas:
+        </div> 
+
+        <div class="paragrafo" >
+            <strong>DA COMPOSIÇÃO DO CRÉDITO</strong>
+        </div>
+
+        <div class="paragrafo" >
+        <strong> CLÁUSULA1ª. </strong> A integralidade do crédito é composta da seguinte forma: Valor 
+        mutuado R$ 503,14, Taxa de Juros a.m (9,50)%, taxa de juros moratório 0,66% ao dia, multa por 
+        atraso: 2%, IOF Adicional ( 1,90), IOF diário (1,24), valor do IOF total: R$ 3,14, Valor total 
+        devido: R$ 646,53.
+        </div>
+        <div class="paragrafo" >
+            <strong> DO CRÉDITO </strong>            
+        </div>
+        <div class="paragrafo" >
+        <strong> CLÁUSULA 2ª. </strong> A CONTRATADA MUTUANTE concedeu à CONTRATANTE MUTUÁRIA um empréstimo no valor descrito na cláusula 1ª – Composição do Crédito, que será restituído nas épocas próprias e nas condições fixadas neste CONTRATO
         CLÁUSULA 3ª. A restituição do valor mutuado, pela CONTRATANTE MUTUÁRIA, será feito conforme Cronograma de Reembolso acima.  
         DA FORMA E PRAZO DE PAGAMENTO 
         CLÁUSULA 4ª. A CONTRATANTE MUTUÁRIA fica obrigada a pagar à CONTRATADA MUTUANTE, nas datas especificadas no Quadro 02 – Cronograma de Reembolso, o valor correspondente ao saldo devedor principal acrescido dos encargos financeiros pactuados e demais acessórios, quando houver. 
